documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L13W32API SCHNDX __stdcall L13_BCSchedRestart(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedReturn(HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSchedUser(ULONG useraddr,HCARD handleval);

L13W32API SCHNDX __stdcall L13_BCSetEntry(HCARD handleval);

L13W32API ERRVAL __stdcall L13_BCSetTimeout(USHORT timeoutval,HCARD handleval);

L13W32API ULONG __stdcall L13_BlkAddr(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_BlkOptRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);

L13W32API ULONG __stdcall L13_BlkPtrRd(INT taval,HCARD handleval);

L13W32API VOID __stdcall L13_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkRd(LPUSHORT block,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkReset(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_BlkSWDRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkSWDWr(USHORT swdval,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkWipe(HCARD handleval);

L13W32API ERRVAL __stdcall L13_BlkWr(LPUSHORT block,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardBoot(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardCloseAll(VOID);

L13W32API ERRVAL __stdcall L13_CardConfig(BOOL enableflag,USHORT command,USHORT taval,HCARD handleval);

L13W32API ULONG __stdcall L13_CardGetInfo(USHORT infotype,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

L13W32API VOID __stdcall L13_CardInit(VOID);

L13W32API BOOL __stdcall L13_CardIsRunning(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardNop(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardNopEx(HCARD handleval);

L13W32API HCARD __stdcall L13_CardOpenEx(LPCSTR cardname,INT cardnum);

L13W32API HCARD __stdcall L13_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L13W32API VOID __stdcall L13_CardResetEx(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardResume(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest(USHORT level,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest0(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest1(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest2(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CardTest3(HCARD handleval);

L13W32API VOID __stdcall L13_CardTrigger(HCARD handleval);

L13W32API ULONG __stdcall L13_CFGRdL(INT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_CFGWrL(ULONG value,INT addrval,HCARD handleval);

L13W32API ULONG __stdcall L13_CmdAddr(SCHNDX index,HCARD handleval);

L13W32API ULONG __stdcall L13_CmdAlloc(INT count,HCARD handleval);

L13W32API ULONG __stdcall L13_CmdAllocEx(ULONG configval,INT count,HCARD handleval);

L13W32API ULONG __stdcall L13_CmdBaseRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdBaseWr(ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CmdClear(HCARD handleval);

L13W32API USHORT __stdcall L13_CmdCountRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdCountWr(USHORT countval,HCARD handleval);

L13W32API USHORT __stdcall L13_CmdCtrlRd(SCHNDX index,HCARD handleval);

L13W32API VOID __stdcall L13_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);

L13W32API USHORT __stdcall L13_CmdCurrRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdCurrWr(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_CmdInit(USHORT opcode,LPUSHORT block);

L13W32API SCHNDX __stdcall L13_CmdInsert(LPUSHORT block,HCARD handleval);

L13W32API USHORT __stdcall L13_CmdMaxRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdMaxWr(USHORT count,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CmdShotWr(BOOL value,SCHNDX index,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);

L13W32API VOID __stdcall L13_CmdStackClr(HCARD handleval);

L13W32API USHORT __stdcall L13_CmdStartRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdStartWr(USHORT addrval,HCARD handleval);

L13W32API INT __stdcall L13_CmdTotalRd(HCARD handleval);

L13W32API VOID __stdcall L13_CmdTotalWr(INT countval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommCall(ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommCheck(HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommDisable(USHORT command,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommDisableEx(USHORT command,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommEnable(HCARD handleval);

L13W32API ULONG __stdcall L13_CommRdL(ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L13W32API USHORT __stdcall L13_CommRdW(ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

L13W32API VOID __stdcall L13_CommWrL(ULONG value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L13W32API VOID __stdcall L13_CommWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DARClr(USHORT maskval,USHORT addrval,HCARD handleval);

L13W32API BOOL __stdcall L13_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);

L13W32API ULONG __stdcall L13_DARRdL(USHORT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_DARRdW(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DARWrL(ULONG value,USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_DARWrW(USHORT value,USHORT addrval,HCARD handleval);