documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB

    Public Declare Function L13_BCSchedRestart Lib "L13W32.DLL" Alias "_L13_BCSchedRestart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedRetryEx Lib "L13W32.DLL" Alias "_L13_BCSchedRetryEx@24" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedReturn Lib "L13W32.DLL" Alias "_L13_BCSchedReturn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSchedUser Lib "L13W32.DLL" Alias "_L13_BCSchedUser@8" (ByVal useraddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSetEntry Lib "L13W32.DLL" Alias "_L13_BCSetEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BCSetTimeout Lib "L13W32.DLL" Alias "_L13_BCSetTimeout@8" (ByVal timeoutval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkAddr Lib "L13W32.DLL" Alias "_L13_BlkAddr@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_BlkOptRd Lib "L13W32.DLL" Alias "_L13_BlkOptRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_BlkOptWr Lib "L13W32.DLL" Alias "_L13_BlkOptWr@12" (ByVal rtopt As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkPtrRd Lib "L13W32.DLL" Alias "_L13_BlkPtrRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_BlkPtrWr Lib "L13W32.DLL" Alias "_L13_BlkPtrWr@12" (ByVal descaddr As UInt32, ByVal taval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_BlkRd Lib "L13W32.DLL" Alias "_L13_BlkRd@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkReset Lib "L13W32.DLL" Alias "_L13_BlkReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkSWDRd Lib "L13W32.DLL" Alias "_L13_BlkSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_BlkSWDWr Lib "L13W32.DLL" Alias "_L13_BlkSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkWipe Lib "L13W32.DLL" Alias "_L13_BlkWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_BlkWr Lib "L13W32.DLL" Alias "_L13_BlkWr@12" (ByRef block As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardBoot Lib "L13W32.DLL" Alias "_L13_CardBoot@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardCloseAll Lib "L13W32.DLL" Alias "_L13_CardCloseAll@0" () As Int32
    Public Declare Function L13_CardConfig Lib "L13W32.DLL" Alias "_L13_CardConfig@16" (ByVal enableflag As Int32, ByVal command As UInt16, ByVal taval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardGetInfo Lib "L13W32.DLL" Alias "_L13_CardGetInfo@8" (ByVal infotype As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_CardGetInfoEx Lib "L13W32.DLL" Alias "_L13_CardGetInfoEx@20" (ByRef bufmodel As UInt16, ByVal bufmodelcount As UInt16, ByRef buffeature As UInt16, ByVal buffeaturecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CardInit Lib "L13W32.DLL" Alias "_L13_CardInit@0" ()
    Public Declare Function L13_CardIsRunning Lib "L13W32.DLL" Alias "_L13_CardIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardNop Lib "L13W32.DLL" Alias "_L13_CardNop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardNopEx Lib "L13W32.DLL" Alias "_L13_CardNopEx@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardOpenEx Lib "L13W32.DLL" Alias "_L13_CardOpenEx@8" (ByRef cardname As String, ByVal cardnum As Int32) As UInt32
    Public Declare Function L13_CardOpenExx Lib "L13W32.DLL" Alias "_L13_CardOpenExx@16" (ByRef cardname As String, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Sub L13_CardResetEx Lib "L13W32.DLL" Alias "_L13_CardResetEx@4" (ByVal handleval As UInt32)
    Public Declare Function L13_CardResume Lib "L13W32.DLL" Alias "_L13_CardResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardTest Lib "L13W32.DLL" Alias "_L13_CardTest@8" (ByVal level As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardTest0 Lib "L13W32.DLL" Alias "_L13_CardTest0@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardTest1 Lib "L13W32.DLL" Alias "_L13_CardTest1@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardTest2 Lib "L13W32.DLL" Alias "_L13_CardTest2@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CardTest3 Lib "L13W32.DLL" Alias "_L13_CardTest3@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CardTrigger Lib "L13W32.DLL" Alias "_L13_CardTrigger@4" (ByVal handleval As UInt32)
    Public Declare Function L13_CFGRdL Lib "L13W32.DLL" Alias "_L13_CFGRdL@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_CFGWrL Lib "L13W32.DLL" Alias "_L13_CFGWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_CmdAddr Lib "L13W32.DLL" Alias "_L13_CmdAddr@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_CmdAlloc Lib "L13W32.DLL" Alias "_L13_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_CmdAllocEx Lib "L13W32.DLL" Alias "_L13_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_CmdBaseRd Lib "L13W32.DLL" Alias "_L13_CmdBaseRd@4" (ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_CmdBaseWr Lib "L13W32.DLL" Alias "_L13_CmdBaseWr@8" (ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_CmdClear Lib "L13W32.DLL" Alias "_L13_CmdClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CmdCountRd Lib "L13W32.DLL" Alias "_L13_CmdCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_CmdCountWr Lib "L13W32.DLL" Alias "_L13_CmdCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_CmdCtrlRd Lib "L13W32.DLL" Alias "_L13_CmdCtrlRd@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_CmdCtrlWr Lib "L13W32.DLL" Alias "_L13_CmdCtrlWr@12" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_CmdCurrRd Lib "L13W32.DLL" Alias "_L13_CmdCurrRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_CmdCurrWr Lib "L13W32.DLL" Alias "_L13_CmdCurrWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_CmdInit Lib "L13W32.DLL" Alias "_L13_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function L13_CmdInsert Lib "L13W32.DLL" Alias "_L13_CmdInsert@8" (ByRef block As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CmdMaxRd Lib "L13W32.DLL" Alias "_L13_CmdMaxRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_CmdMaxWr Lib "L13W32.DLL" Alias "_L13_CmdMaxWr@8" (ByVal count As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_CmdRd Lib "L13W32.DLL" Alias "_L13_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CmdShotWr Lib "L13W32.DLL" Alias "_L13_CmdShotWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CmdSkipWr Lib "L13W32.DLL" Alias "_L13_CmdSkipWr@12" (ByVal value As Int32, ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CmdStackClr Lib "L13W32.DLL" Alias "_L13_CmdStackClr@4" (ByVal handleval As UInt32)
    Public Declare Function L13_CmdStartRd Lib "L13W32.DLL" Alias "_L13_CmdStartRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_CmdStartWr Lib "L13W32.DLL" Alias "_L13_CmdStartWr@8" (ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_CmdTotalRd Lib "L13W32.DLL" Alias "_L13_CmdTotalRd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CmdTotalWr Lib "L13W32.DLL" Alias "_L13_CmdTotalWr@8" (ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_CmdWr Lib "L13W32.DLL" Alias "_L13_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommCall Lib "L13W32.DLL" Alias "_L13_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommCheck Lib "L13W32.DLL" Alias "_L13_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommDisable Lib "L13W32.DLL" Alias "_L13_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommDisableEx Lib "L13W32.DLL" Alias "_L13_CommDisableEx@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommEnable Lib "L13W32.DLL" Alias "_L13_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommRdL Lib "L13W32.DLL" Alias "_L13_CommRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_CommRdsW Lib "L13W32.DLL" Alias "_L13_CommRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_CommRdW Lib "L13W32.DLL" Alias "_L13_CommRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_CommRun Lib "L13W32.DLL" Alias "_L13_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CommWrL Lib "L13W32.DLL" Alias "_L13_CommWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_CommWrsW Lib "L13W32.DLL" Alias "_L13_CommWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L13_CommWrW Lib "L13W32.DLL" Alias "_L13_CommWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_DARClr Lib "L13W32.DLL" Alias "_L13_DARClr@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_DARGet Lib "L13W32.DLL" Alias "_L13_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_DARRdL Lib "L13W32.DLL" Alias "_L13_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_DARRdW Lib "L13W32.DLL" Alias "_L13_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_DARSet Lib "L13W32.DLL" Alias "_L13_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_DARWrL Lib "L13W32.DLL" Alias "_L13_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_DARWrW Lib "L13W32.DLL" Alias "_L13_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
